.metadata/.plugins/org.eclipse.cdt.ui/SLEEP_MODE.build.log
09:46:37 **** Incremental Build of configuration Debug for project SLEEP_MODE ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L152xC -c -I../Core/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_UART_RxCpltCallback':
../Core/Src/main.c:68:44: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   68 |   HAL_UART_Transmit(&huart2,(uint8_t *)str,strlen(str),HAL_MAX_DELAY);
      |                                            ^~~~~~
../Core/Src/main.c:68:44: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'strlen'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c: In function 'HAL_GPIO_EXTI_Callback':
../Core/Src/main.c:73:43: warning: incompatible implicit declaration of built-in function 'strlen'
   73 |  HAL_UART_Transmit(&huart2,(uint8_t *)str,strlen(str),HAL_MAX_DELAY);
      |                                           ^~~~~~
../Core/Src/main.c:73:43: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c:83:5: warning: 'main' is normally a non-static function [-Wmain]
   83 | int main(void)
      |     ^~~~
../Core/Src/main.c:203:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  203 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:236:13: error: invalid storage class for function 'MX_GPIO_Init'
  236 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:284:1: error: expected declaration or statement at end of input
  284 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:52:13: warning: 'MX_GPIO_Init' used but never defined
   52 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:53:13: warning: 'MX_USART2_UART_Init' used but never defined
   53 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:275:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  275 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:236:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  236 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:203:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  203 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:159:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  159 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:83:5: warning: 'main' defined but not used [-Wunused-function]
   83 | int main(void)
      |     ^~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

09:46:38 Build Failed. 4 errors, 11 warnings. (took 937ms)

